k8s/manifests/django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deploy
  namespace: django-ns
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django
          image: sieun1803/django-k8s-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
