k8s/manifests/django-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: django-ns
spec:
  selector:
    app: django-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
