k8s/manifests/django-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress                
  namespace: django-ns                
  annotations:
    kubernetes.io/ingress.class: "nginx"  
spec:
  rules:
    - host: django.local             
      http:
        paths:
          - path: /                  
            pathType: Prefix
            backend:
              service:
                name: django-service  
                port:
                  number: 80
